--- a/hangman.html
+++ b/hangman.html
@@ -19,9 +19,6 @@
         </nav>
     </header>
     <main>
-        <div class="d-flex justify-content-center mt-3 text-light">
-            <input type="file" id="getFile"/>
-        </div>
         <div class="col-md-12 text-center mt-2">
             <h1 class="text-light">Welcome to Hangman</h1>            
             <h6 class="text-light">Guess the word below</h6>
@@ -38,7 +35,11 @@
                 <input type="button" id="submit" value="Submit" />
         </form>
         <div class="col-md-12 text-center mt-2">
-            <h1 class="text-warning" id="hangmanMissedLetters"> </h1>
+            <h1 class="text-danger" id="error"></h1>
+            <h1 class="text-danger" id="hangmanMissedLetters"></h1>
+        </div>
+        <div class="d-flex justify-content-center mt-5 text-light">
+            <input type="file" id="getFile"/>
         </div>
     </main>
 </body>
