Added couple changes

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </header>
     <main class="padding-5">
         <div class="card text-white bg-primary mb-3" style="max-width: 18rem; background-color: #574274 !important;">
-            <div class="card-header">Stopwatch</div>
+            <div class="card-header">hangman</div>
             <div class="card-body">
-              <p class="card-text">This project is just a simple Stopwatch program to get my self more familiar with JavaScript</p>
-              <form method="get" action="stopwatch.html">
+              <p class="card-text">This project is just a simple Hangman program to get my self more familiar with JavaScript</p>
+              <form method="get" action="hangman.html">
                 <input type="submit"  class="btn btn-info" value="Click Me">
             </form>
             </div>
