Added youtube converter

--- a/hangman.html
+++ b/hangman.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Projects</title>
     <link rel="stylesheet" href="Styles/hangman.css">
+    <script>iFrameResize({ log: false, minHeight: 360 }, '#buttonApi')</script>
     <link rel="shortcut icon" href="#">
     <script src="Scripts/hangman.js" defer></script> 
     <!-- Importing Bootstrap --> 
