--- a/index.html
+++ b/index.html
@@ -16,12 +16,21 @@
             <a class="navbar-brand display-1 " href="#">JS Projects</a>
         </nav>
     </header>
-    <main class="padding-5">
+    <main class="padding-5 " style="flex-direction: row;">
         <div class="card text-white bg-primary mb-3" style="max-width: 18rem; background-color: #574274 !important;">
-            <div class="card-header">hangman</div>
+            <div class="card-header">Hangman</div>
             <div class="card-body">
-              <p class="card-text">This project is just a simple Hangman program to get my self more familiar with JavaScript</p>
+              <p class="card-text">This project is just a simple hangman program to get my self more familiar with JavaScript</p>
               <form method="get" action="hangman.html">
+                <input type="submit"  class="btn btn-info" value="Click Me">
+            </form>
+            </div>
+          </div>
+          <div class="card text-white bg-primary mb-3" style="max-width: 18rem; background-color: #574274 !important;">
+            <div class="card-header">Youtube Converter</div>
+            <div class="card-body">
+              <p class="card-text">This project is just a simple youtube converter program to get my self more familiar with JavaScript</p>
+              <form method="get" action="youtubeMP3Converter.html">
                 <input type="submit"  class="btn btn-info" value="Click Me">
             </form>
             </div>
